tests/lean/liftOverLeft.lean.expected.out
liftOverLeft.lean:3:11-3:18: error: Cannot lift nested action `← x.get` over a binder.
This error usually happens when you are trying to lift a method nested in a `fun`, `let`, or `match`-alternative, and it can often be fixed by adding a missing `do`.
liftOverLeft.lean:8:11-8:18: error: Cannot lift nested action `← x.get` over a binder.
This error usually happens when you are trying to lift a method nested in a `fun`, `let`, or `match`-alternative, and it can often be fixed by adding a missing `do`.
